[package]
name = "blockchain-pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
hex = "0.4.3"
libp2p = { version = "0.44.0", features = ["tcp-tokio", "mdns"] }
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
